--- a/blw/blw/blwresources/src/main/resources.dev/log4j.properties
+++ b/blw/blw/blwresources/src/main/resources.dev/log4j.properties
@@ -12,8 +12,8 @@ log4j.appender.RollingFile.File=../logs/test/jeesite.log
 log4j.appender.RollingFile.layout=org.apache.log4j.PatternLayout
 log4j.appender.RollingFile.layout.ConversionPattern=%d [%t] %-5p [%c] - %m%n
 
-#log4j.logger.java.sql=DEBUG
-
+log4j.logger.java.sql=DEBUG
+log4j.logger.com.blw=DEBUG
 #Springframework level
 #log4j.logger.org.springframework=ERROR
 
