--- a/blw/blw/pom.xml
+++ b/blw/blw/pom.xml
@@ -67,13 +67,13 @@
         </repository>
     </repositories>-->
     <!-- 设定插件仓库 -->
-    <pluginRepositories>
+    <!--<pluginRepositories>
         <pluginRepository>
             <id>jeesite-repos</id>
             <name>Jeesite Repository</name>
             <url>http://maven.aliyun.com/nexus/content/groups/public</url>
         </pluginRepository>
-    </pluginRepositories>
+    </pluginRepositories>-->
 
     <dependencies>
         <dependency>
@@ -111,6 +111,23 @@
             <version>1.4.0</version>
         </dependency>
 
+        <!-- CACHE begin -->
+        <dependency>
+            <groupId>net.sf.ehcache</groupId>
+            <artifactId>ehcache-core</artifactId>
+            <version>${ehcache.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>net.sf.ehcache</groupId>
+            <artifactId>ehcache-web</artifactId>
+            <version>${ehcache-web.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>redis.clients</groupId>
+            <artifactId>jedis</artifactId>
+            <version>2.5.1</version>
+        </dependency>
+        <!-- CACHE end -->
         <!-- connection pool -->
         <dependency>
             <groupId>com.alibaba</groupId>
